# sipdemo

./: .cursorrules  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.cursor/rules/: sipdemo-agent.mdc
.cursor/skills/automated-improver/: SKILL.md
docs/: ISSUES.md  PERFORMANCE.md  talking_points.md
gateway/: app.py  requirements.txt
gateway/model/: README.md
include/sipdemo/: BoundedQueue.h  G711.h  JitterBuffer.h  Resample.h  Rfc4733.h  RtpPacket.h  RtpStats.h  Sdp.h  SipMessage.h  SipParser.h  SipUas.h  UdpSocket.h  WsClient.h
scripts/: build.ps1  run-demo.ps1  test.ps1
src/app/: main.cpp
src/codec/: G711.cpp  Resample.cpp
src/dtmf/: Rfc4733.cpp
src/jitter/: JitterBuffer.cpp
src/net/: UdpSocket.cpp
src/rtp/: RtpPacket.cpp
src/sip/: Sdp.cpp  SipParser.cpp  SipUas.cpp
src/stats/: RtpStats.cpp
src/tools/: rtp_sender.cpp
src/ws/: WsClient.cpp
tasks/: lessons.md  todo.md
tests/: dtmf_test.cpp  g711_test.cpp  jitter_test.cpp  queue_test.cpp  resample_test.cpp  rtp_test.cpp  sdp_test.cpp  sip_test.cpp
